--- a/portal-theme/src/main/webapp/templates/portal_normal.vm
+++ b/portal-theme/src/main/webapp/templates/portal_normal.vm
@@ -35,6 +35,10 @@
 				</a>
 			</h2>
 
+			<div id="quote">
+				#parse ("$full_templates_path/quote.vm")
+			</div>
+
 			<h3 class="page-title">
 				<span>$the_title</span>
 			</h3>
@@ -48,13 +52,6 @@
 	</header>
 
 	<div id="content">
-		<nav class="site-breadcrumbs" id="breadcrumbs">
-			<h1>
-				<span>#language("breadcrumbs")</span>
-			</h1>
-
-			#breadcrumbs()
-		</nav>
 
 		#if ($selectable)
 			$theme.include($content_include)
@@ -68,9 +65,7 @@
 	</div>
 
 	<footer id="footer" role="contentinfo">
-		<p class="powered-by">
-			#language("powered-by") <a href="http://www.liferay.com" rel="external">Liferay</a>
-		</p>
+		#parse ("$full_templates_path/footer.vm")
 	</footer>
 </div>
 
