--- a/portal-theme/src/main/webapp/css/custom.css
+++ b/portal-theme/src/main/webapp/css/custom.css
@@ -75,11 +75,20 @@ body #banner .logo a {
 #banner ul li a{
 	font-size: 0.875em;
 	color: #000000;
+	text-decoration: none;
+}
+
+#banner ul li a:hover{
+	text-decoration: underline;
+	color: : #333333;
 }
 
 #banner ul li input[type="text"] {
-	display : inline-block;
-	list-style-type: none;
+	font : 14px "Trebuchet MS", sans-serif;
+	padding : 1px;
+	box-shadow: 0px 0px 8px #CCC inset;
+	width : 140px;
+	height : 20px;
 }
 
 #banner .logo {
