--- a/portal-theme/src/main/webapp/css/custom.css
+++ b/portal-theme/src/main/webapp/css/custom.css
@@ -512,7 +512,7 @@ div.slides-wrap {
     a.slidesjs-previous,
     a.slidesjs-play,
     a.slidesjs-stop {
-      background-image: url(/image/image_gallery?uuid=023667d5-b968-4a66-b28e-184e2d7a4f53&groupId=10156&t=1392584746632);
+      background-image: url(/images/btns-next-prev-2.png);
       background-repeat: no-repeat;
       display:block;
       width:24px;
@@ -550,7 +550,7 @@ a.slidesjs-next:hover, a.slidesjs-previous:hover,  {
       width: 26px;
       height: 0;
       padding-top: 26px;
-      background-image: url(/image/image_gallery?uuid=c27bb5a1-b953-405d-add9-f98d05a298f0&groupId=10156&t=1392584746625);
+      background-image: url(/images/pagination.png);
       background-position: 0 -2px;
       float: left;
       overflow: hidden;
@@ -624,7 +624,7 @@ a.slidesjs-next:hover, a.slidesjs-previous:hover,  {
 /* ---------- Footer ---------- */
 
 #footer {
-	
+	padding : 5%;	
 }
 
 #footer ul {
